--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "jwt",
+  "name": "unifacisa-api-rest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev  --respawn --transpile-only  src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec npx ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.16",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "ts-node-dev": "^2.0.0",
+    "@types/bcryptjs": "^2.4.3",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.4",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "apollo-server": "^3.12.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "get-my-own-ip": "^1.0.0",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^7.5.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   }
 }
